Work on in bounds

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,9 @@
   <head>
     <title>BenchBnb</title>
     <%= csrf_meta_tags %>
-
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCd0PBt16OzwBfurZvuXAe64CRdXQ542fo">
+    </script>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
